# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.sql  db.py  page_checker.py  site_checker.py  utils.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  form.html  nav.html
page_analyzer/templates/urls/: url.html  urls.html
