[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Raphael <raphael.mukha@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
